--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.App"
         tools:targetApi="31">
         <activity
+            android:name="._add_food"
+            android:exported="false" />
+        <activity
+            android:name=".Vermais"
+            android:exported="false" />
+        <activity
+            android:name=".usuario_senha"
+            android:exported="false" />
+        <activity
+            android:name=".infla_frame_alimentos"
+            android:exported="false" />
+        <activity
+            android:name=".infla_frame_tmb"
+            android:exported="false" />
+        <activity
+            android:name=".infla_frame_perfil"
+            android:exported="false" />
+        <activity
             android:name=".UsuarioCadastrado"
             android:exported="false" />
         <activity
